# transyn

./: .dockerignore  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yaml
apps/api/: .env.example  Dockerfile  eslint.config.js  package.json  tsconfig.json  vitest.config.js
apps/api/src/: app.ts
apps/api/src/config/: langs.ts
apps/api/src/errors/: appError.ts  errorHandler.ts
apps/api/src/errors/__test__/: appError.test.ts  errorHandler.test.ts
apps/api/src/plugins/: bullmq.ts  index.ts  redis.ts
apps/api/src/plugins/__test__/: bullmq.test.ts  redis.test.ts
apps/api/src/routes/: translation.route.ts
apps/api/src/routes/__test__/: translation.route.test.ts
apps/api/src/services/: bullmq.ts  redis.ts
apps/api/src/services/__test__/: bullmq.test.ts  redis.test.ts
apps/api/src/types/: error.ts  fastify.d.ts  langs.ts  queue.ts  route.ts
apps/api/src/utils/: env.ts  loader.ts  logger.ts
apps/api/src/utils/__test__/: env.test.ts  loader.test.ts  logger.test.ts
apps/api/tests/: app.test.ts
apps/translate/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt
apps/translate/src/translate/: __init__.py  config.py  model.py  worker.py
apps/translate/tests/: test_config.py  test_model.py  test_worker.py
config/nginx/: default.conf.template  entrypoint.sh  nginx.conf
docs/: project-requirements.md
